--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -8,134 +8,128 @@
 #   - bringup_status (if present): BringupStatus names (e.g., FAILED_TTMLIR_COMPILATION) or values (e.g., failed_ttmlir_compilation)
 
 test_config:
-  falcon/pytorch-tiiuae/Falcon3-1B-Base-llm_decode-single_device-inference:
+  falcon/pytorch-tiiuae/Falcon3-1B-Base-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
 
-  falcon/pytorch-tiiuae/Falcon3-3B-Base-llm_decode-single_device-inference:
+  falcon/pytorch-tiiuae/Falcon3-3B-Base-llm_decode-seqDefault-batchDefault-single_device-inference:
     required_pcc: 0.985 # Is 0.990 (p150) or 0.989 (n150)
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
 
-  falcon/pytorch-tiiuae/Falcon3-7B-Base-llm_decode-single_device-inference:
+  falcon/pytorch-tiiuae/Falcon3-7B-Base-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
 
-  falcon/pytorch-tiiuae/Falcon3-10B-Base-llm_decode-single_device-inference:
+  falcon/pytorch-tiiuae/Falcon3-10B-Base-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     required_pcc: 0.975 # Calculated: pcc=0.9791326592500703 - https://github.com/tenstorrent/tt-xla/issues/3212
     status: EXPECTED_PASSING
 
-  qwen_2_5/causal_lm/pytorch-0_5b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-0_5b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  qwen_2_5/causal_lm/pytorch-1_5b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-1_5b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  qwen_2_5/causal_lm/pytorch-3b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-3b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845 - original test also has low pcc
 
-  qwen_2_5/causal_lm/pytorch-7b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-7b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     required_pcc: 0.970 # Calculated: pcc=0.9717385717419725 - https://github.com/tenstorrent/tt-xla/issues/3212
     status: EXPECTED_PASSING
 
-  qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  qwen_2_5/causal_lm/pytorch-32b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-32b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  qwen_2_5/causal_lm/pytorch-72b_instruct-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-72b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  gemma/pytorch-google/gemma-1.1-2b-it-llm_decode-single_device-inference:
+  gemma/pytorch-google/gemma-1.1-2b-it-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
 
-  gemma/pytorch-google/gemma-1.1-7b-it-llm_decode-single_device-inference:
+  gemma/pytorch-google/gemma-1.1-7b-it-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  gemma/pytorch-google/gemma-2-2b-it-llm_decode-single_device-inference:
+  gemma/pytorch-google/gemma-2-2b-it-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  gemma/pytorch-google/gemma-2-9b-it-llm_decode-single_device-inference:
+  gemma/pytorch-google/gemma-2-9b-it-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  gemma/pytorch-google/gemma-2-27b-it-llm_decode-single_device-inference:
+  gemma/pytorch-google/gemma-2-27b-it-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  llama/causal_lm/pytorch-llama_3_1_8b_instruct-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_1_8b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
 
-  llama/causal_lm/pytorch-llama_3_1_70b-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_1_70b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  llama/causal_lm/pytorch-llama_3_1_70b_instruct-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_1_70b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  llama/causal_lm/pytorch-llama_3_1_405b-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_1_405b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  llama/causal_lm/pytorch-llama_3_2_1b_instruct-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_2_1b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  llama/causal_lm/pytorch-llama_3_2_3b_instruct-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_2_3b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-llama_3_3_70b_instruct-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_3_70b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  qwen_3/causal_lm/pytorch-0_6b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-0_6b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
 
-  qwen_3/causal_lm/pytorch-1_7b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-1_7b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
 
-  qwen_3/causal_lm/pytorch-4b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-4b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
 
-  qwen_3/causal_lm/pytorch-8b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-8b-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2845
 
-  qwen_3/causal_lm/pytorch-14b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-14b-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
 
-  qwen_3/causal_lm/pytorch-32b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-32b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  qwen_3/causal_lm/pytorch-30b_a3b-llm_decode-single_device-inference:
+  qwen_3/causal_lm/pytorch-30b_a3b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
-  llama/causal_lm/pytorch-llama_3_2_3b-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_2_3b-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-TinyLlama_v1.1-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-TinyLlama_v1.1-llm_decode-seqDefault-batchDefault-single_device-inference:
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-llama_3_2_1b_instruct-llm_prefill-single_device-inference:
-    status: EXPECTED_PASSING
-
-  llama/causal_lm/pytorch-llama_3_2_3b_instruct-llm_prefill-single_device-inference:
-    status: EXPECTED_PASSING
-
-  qwen_2_5/causal_lm/pytorch-7b-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-7b-llm_decode-seqDefault-batchDefault-single_device-inference:
     arch_overrides:
       p150:
         status: EXPECTED_PASSING
@@ -143,7 +137,7 @@ test_config:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
 
-  qwen_2_5/causal_lm/pytorch-7b_instruct_1m-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-7b_instruct_1m-llm_decode-seqDefault-batchDefault-single_device-inference:
     arch_overrides:
       p150:
         status: EXPECTED_PASSING
@@ -151,23 +145,23 @@ test_config:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
 
-  qwen_2_5/causal_lm/pytorch-14b_instruct_1m-llm_decode-single_device-inference:
+  qwen_2_5/causal_lm/pytorch-14b_instruct_1m-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-llama_3_8b_instruct-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_8b_instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-llama_3_8b-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_8b-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-llama_3_1_8b-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-llama_3_1_8b-llm_decode-seqDefault-batchDefault-single_device-inference:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
 
-  llama/causal_lm/pytorch-huggyllama_7b-llm_decode-single_device-inference:
+  llama/causal_lm/pytorch-huggyllama_7b-llm_decode-seqDefault-batchDefault-single_device-inference:
     arch_overrides:
       p150:
         status: EXPECTED_PASSING
@@ -175,10 +169,61 @@ test_config:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
 
-  falcon/pytorch-tiiuae/falcon-7b-instruct-llm_decode-single_device-inference:
+  falcon/pytorch-tiiuae/falcon-7b-instruct-llm_decode-seqDefault-batchDefault-single_device-inference:
     arch_overrides:
       p150:
         status: EXPECTED_PASSING
       n150:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
+
+  # Llama 3.2 1B Prefill tests with different seq_len and batch_size
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq128-batch1-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 128
+    batch_size: 1
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq128-batch2-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 128
+    batch_size: 2
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq1024-batch1-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 1024
+    batch_size: 1
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq1024-batch2-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 1024
+    batch_size: 2
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq2048-batch1-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 2048
+    batch_size: 1
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq2048-batch2-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 2048
+    batch_size: 2
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq4096-batch1-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 4096
+    batch_size: 1
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq4096-batch2-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 4096
+    batch_size: 2
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq8192-batch1-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 8192
+    batch_size: 1
+
+  llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq8192-batch2-single_device-inference:
+    status: EXPECTED_PASSING
+    seq_len: 8192
+    batch_size: 2
