--- a/.github/workflows/schedule-transformers-compat.yml
+++ b/.github/workflows/schedule-transformers-compat.yml
@@ -284,7 +284,7 @@ jobs:
 
     - name: Run Claude Code to fix and re-run tests
       if: steps.run-tests.outcome == 'failure'
-      timeout-minutes: 30
+      timeout-minutes: 120
       env:
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         HF_HOME: /mnt/dockercache/huggingface
@@ -294,6 +294,7 @@ jobs:
       shell: bash
       run: |
         cat claude_prompt.txt | claude -p \
+          --verbose \
           --allowedTools "Edit,Read,Glob,Grep,Write,Bash"
 
     - name: Revert any changes to third_party submodules
