--- a/tests/integrations/vllm_plugin/pooling/test_config/model_configs.yaml
+++ b/tests/integrations/vllm_plugin/pooling/test_config/model_configs.yaml
@@ -5,6 +5,7 @@
 # vLLM pooling (embedding) model test configurations.
 # Defaults are applied in test_config/__init__.py (DEFAULT_POOLING_CONFIG).
 # Only "model" is required. "marks" default to [single_device]; add marks only when overriding.
+# "status" defaults to "unspecified" when omitted.
 
 model_configs:
   vllm_sweep_bge_m3:
@@ -15,7 +16,7 @@ model_configs:
     prompts:
       - "Hello, my name is"
       - "The capital of France is Paris"
-
+    status: "expected_passing"
   vllm_sweep_bge_base:
     model: "BAAI/bge-base-en"
     max_model_len: 64
@@ -23,12 +24,12 @@ model_configs:
     prompts:
       - "Hello, my name is"
       - "The capital of France is Paris"
-
+    status: "expected_passing"
   vllm_sweep_bge_small:
     model: "BAAI/bge-small-en"
     max_model_len: 64
     max_num_seqs: 2
-
+    status: "expected_passing"
   vllm_sweep_e5_small:
     model: "intfloat/e5-small-v2"
     max_model_len: 64
@@ -36,40 +37,41 @@ model_configs:
     prompts:
       - "Hello, my name is"
       - "The capital of France is Paris"
-
+    status: "expected_passing"
   vllm_sweep_e5_base:
     model: "intfloat/e5-base-v2"
     max_model_len: 64
     max_num_seqs: 2
-
+    status: "expected_passing"
   vllm_sweep_qwen3_embedding_0_6b:
     model: "Qwen/Qwen3-Embedding-0.6B"
-
+    status: "expected_passing"
   vllm_sweep_qwen3_embedding_4b:
     model: "Qwen/Qwen3-Embedding-4B"
-
+    status: "expected_passing"
   vllm_sweep_all_minilm:
     model: "sentence-transformers/all-MiniLM-L6-v2"
     max_model_len: 64
     max_num_seqs: 2
-
+    status: "expected_passing"
   vllm_sweep_multi_qa_minilm:
     model: "sentence-transformers/multi-qa-MiniLM-L6-cos-v1"
     max_model_len: 64
     max_num_seqs: 2
-
-  vllm_sweep_llama: # Out of Memory: Not enough space to allocate 234881024 B DRAM buffer across 12 banks, where each bank needs to store 19574784 B, but bank size is 1073741792 B (allocated: 1055589376 B, free: 18152416 B, largest free block: 4194304 B)
+    status: "expected_passing"
+  vllm_sweep_e5_mistral_7b_instruct:
     model: "intfloat/e5-mistral-7b-instruct"
-
-  vllm_sweep_gritlm: # ValueError: TT backend only supports V1.
+    status: "known_failure_xfail"
+    reason: "Out of Memory: Not enough space to allocate 234881024 B DRAM buffer across 12 banks, where each bank needs to store 19574784 B, but bank size is 1073741792 B (allocated: 1055589376 B, free: 18152416 B, largest free block: 4194304 B)"
+  vllm_sweep_gritlm: # was failing before because of a ValueError: TT backend only supports V1. should be new error with uplift
     model: "parasail-ai/GritLM-7B-vllm"
-
   vllm_sweep_roberta:
     model: "sentence-transformers/nli-roberta-base-v2"
     max_model_len: 64
     max_num_seqs: 2
-
+    status: "expected_passing"
   vllm_sweep_xlm_roberta:
     model: "sentence-transformers/stsb-xlm-r-multilingual"
     max_model_len: 64
     max_num_seqs: 2
+    status: "expected_passing"
