--- a/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
@@ -201,3 +201,13 @@ test_config:
     supported_archs: [n300-llmbox]
     assert_pcc: false # PCC comparison failed. Calculated: pcc=0.701951301689392. Required: pcc=0.99
     status: EXPECTED_PASSING
+
+  mistral/pytorch-mistral_small_3.1_24b_instruct_2503-tensor_parallel-inference:
+    supported_archs: [n300-llmbox]
+    assert_pcc: false # PCC comparison failed. Calculated: pcc=0.9757716745992953. Required: pcc=0.99
+    status: EXPECTED_PASSING
+
+  mistral/pytorch-mistral_small_3.2_24b_instruct_2506-tensor_parallel-inference:
+    supported_archs: [n300-llmbox]
+    status: KNOWN_FAILURE_XFAIL
+    reason: "KeyError: c_lifted_tensor_1 - https://github.com/tenstorrent/tt-xla/issues/3221"
